[package]
name = "pincon"
version = "0.1.1"
edition = "2021"
description = "Account validation macros for Pinocchio on Solana"

[workspace]
members = ["examples/basic-usage", "pincon-macros", "tests/signer"]

[dependencies]
pincon-macros = { path = "pincon-macros" }

[workspace.dependencies]
pinocchio = "0.10.1"
