[package]
name = "pincon"
authors = ["Aklilu Yirgalem <akliluyirgalem@gmail.com>"]
repository = "https://github.com/AkliluYirgalem/pincon"
readme = "README.md"
license-file = "LICENSE"
edition = "2021"
version = "0.1.1"
description = "Account validation macros for Pinocchio on Solana"

[workspace]
members = ["examples/*", "pincon-macros", "tests/*"]

[dependencies]
pincon-macros = { path = "pincon-macros" }

[workspace.dependencies]
pinocchio = "0.10.1"
