[package]
name = "basic-usage"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pincon = { path = "../.." }
pinocchio = { version = "0.10.1" }
pinocchio-log = { version = "0.5.1" }
pinocchio-system = {version = "0.5.0"}

[dev-dependencies]
mollusk-svm = { version = "0.10.1" }
solana-sdk = {version = "4.0.0"}

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']
